--- a/i18n/en/components/pages/nr7/my-country/edit/section-III.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/section-III.json
@@ -1,4 +1,10 @@
 {
     "sectionIII":"Section III",
-    "sectionIIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework "
+    "sectionIIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+    "headlineIndicators": "Headline indicator",
+    "binaryIndicators": "Binary indicator",
+    "componentIndicators": "Component indicator",
+    "complementaryIndicators": "Complementary indicator",
+    "nationalIndicators": "National indicator"
+
 }
