--- a/i18n/ru/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
+++ b/i18n/ru/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
@@ -5,10 +5,10 @@
   "yes": "Да",
   "no": "Нет",
   "inProcess": "В процессе",
-  "indicateCompletionDate": "Укажите предполагаемую дату завершения пересмотра или обновления НСПДСБ",
+  "anticipatedNbsapDate": "Укажите предполагаемую дату завершения пересмотра или обновления НСПДСБ",
   "stakeholderEngagement": "Ваша страна привлекла и задействовала в процессе пересмотра или обновления НСПДСБ субъекты деятельности?",
   "stakeholders": "Субъекты деятельности",
   "hasNbsapAdopted": "Пересмотренные или обновленные НСПДСБ были приняты в вашей стране в качестве мер политики или правовых документов?",
-  "indicateAdoptionDate": "Укажите предполагаемую дату принятия",
+  "anticipatedNbsapAdoptionDate": "Укажите предполагаемую дату принятия",
   "policyInstrument": "Укажите тип политического документа, в качестве которого в вашей стране были приняты обновленные НСПДСБ."
 }
