--- a/i18n/ar/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
+++ b/i18n/ar/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
@@ -5,10 +5,10 @@
   "yes": "نعم",
   "no": "لا",
   "inProcess": "قيد التنفيذ",
-  "indicateCompletionDate": "يرجى الإشارة إلى التاريخ المتوقع لاستكمال تنقيح أو تحديث الاستراتيجيات وخطط العمل الوطنية للتنوع البيولوجي",
+  "anticipatedNbsapDate": "يرجى الإشارة إلى التاريخ المتوقع لاستكمال تنقيح أو تحديث الاستراتيجيات وخطط العمل الوطنية للتنوع البيولوجي",
   "stakeholderEngagement": "هل وجه بلدك الدعوة للأطراف والجهات المعنية وأشركها في تنقيح أو تحديث الاستراتيجيات وخطط العمل الوطنية للتنوع البيولوجي؟",
   "stakeholders": "الجهات المعنية",
   "hasNbsapAdopted": "هل تم اعتماد الاستراتيجيات وخطط العمل الوطنية المُنقّحة أو المُحدَّثة للتنوع البيولوجي في بلدك كسياسات رسمية أو كنصوص قانونية؟",
-  "indicateAdoptionDate": "يُرجى توضيح تاريخ الاعتماد",
+  "anticipatedNbsapAdoptionDate": "يُرجى توضيح تاريخ الاعتماد",
   "policyInstrument": "يرجى الإشارة إلى نوع السياسة الرسمية التي على أساسها تم اعتماد الاستراتيجيات وخطط العمل الوطنية المُنقّحة أو المُحدَّثة للتنوع البيولوجي في بلدك"
 }
