--- a/i18n/fr/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
+++ b/i18n/fr/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
@@ -5,10 +5,10 @@
   "yes": "Oui",
   "no": "Non",
   "inProcess": "En cours de processus",
-  "indicateCompletionDate": "Veuillez indiquer la date anticipée de réalisation de la révision et la mise à jour des SPANBs.",
+  "anticipatedNbsapDate": "Veuillez indiquer la date anticipée de réalisation de la révision et la mise à jour des SPANBs.",
   "stakeholderEngagement": "Est-ce que votre pays implique et engage des parties prenantes pour la révision et la mise à jour des SPANBs?",
   "stakeholders": "Parties prenantes",
   "hasNbsapAdopted": "Est-ce que les SPANBs révisés ou mis à jour a été adopté en tant qu’instrument légal ou comme politique?",
-  "indicateAdoptionDate": "Veuillez indiquer la date anticipée d’adoption",
+  "anticipatedNbsapAdoptionDate": "Veuillez indiquer la date anticipée d’adoption",
   "policyInstrument": "Veuillez indiquer le type d’instrument politique adopté des SPANBs révisés et mis à jour de votre pays"
 }
