--- a/i18n/zh/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
+++ b/i18n/zh/components/pages/nr7/my-country/edit/nr7-edit-section-II.json
@@ -5,10 +5,10 @@
   "yes": "是",
   "no": "否",
   "inProcess": "进行中",
-  "indicateCompletionDate": "请说明修订或更新国家生物多样性战略和行动计划的预计完成日期",
+  "anticipatedNbsapDate": "请说明修订或更新国家生物多样性战略和行动计划的预计完成日期",
   "stakeholderEngagement": "贵国是否让利益攸关方参与修订或更新国家生物多样性战略和行动计划？",
   "stakeholders": "利益攸关方",
   "hasNbsapAdopted": "贵国经修订或更新的国家生物多样性战略和行动计划是否已作为政策或法律文书获得通过？",
-  "indicateAdoptionDate": "请注明预计的通过日期",
+  "anticipatedNbsapAdoptionDate": "请注明预计的通过日期",
   "policyInstrument": "请指出贵国经修订或更新的国家生物多样性战略和行动计划作为哪类政策工具获通过"
 }
