--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
@@ -1,3 +1,12 @@
-{"sectionII":"Section II",
-"sectionIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+{
+    "sectionII":"Section II",
+    "sectionIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+    "headline": "Headline indicator",
+    "binary": "Binary indicator",
+    "component": "Component indicator",
+    "complementary": "Complementary indicator",
+    "national": "National indicator",
+
+    "complementaryIndicators" : "Complementary indicators",
+    "componentIndicators"      : "Component indicators"
 }
