--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
@@ -1,6 +1,6 @@
 {
-    "sectionII":"Section II",
-    "sectionIIDescription":"Status of the revised or updated national biodiversity strategies and action plans (NBSAPs) in the light of the Kunming-Montreal Global Biodiversity Framework ",
+    "sectionIV":"Section IV",
+    "sectionIVDescription":"Assessment of national progress towards the goals and targets of the Kunming-Montreal Global Biodiversity Framework",
     "headline": "Headline indicator",
     "binary": "Binary indicator",
     "component": "Component indicator",
