--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-III.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-III.json
@@ -5,6 +5,7 @@
     "binaryIndicators": "Binary indicator",
     "componentIndicators": "Component indicator",
     "complementaryIndicators": "Complementary indicator",
-    "nationalIndicators": "National indicator"
+    "nationalIndicators": "National indicator",
+    "sectionMandatory" : "All fields in Section III are mandatory"
 
 }
