--- a/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/nr7-edit-section-IV.json
@@ -8,5 +8,6 @@
     "national": "National indicator",
 
     "complementaryIndicators" : "Complementary indicators",
-    "componentIndicators"      : "Component indicators"
+    "componentIndicators"      : "Component indicators",
+    "sectionMandatory" : "All fields in Section IV are mandatory"
 }
