--- a/i18n/en/components/pages/national-targets/my-country/overview.json
+++ b/i18n/en/components/pages/national-targets/my-country/overview.json
@@ -29,5 +29,41 @@
     "refresh"                : "Refresh",
     "goToPartI"              : "Go to Part I",
     "submitNewTarget"        : "Submit new target",
-    "globalTargets"          : "Global Targets"
+    "globalTargets"          : "Global Targets",
+
+    "tourWelcomeTitle"     : "National targets overview",
+    "tourWelcomeContent"   : "The National targets overview screen will give you an overview of both the sections under the national targets and allows you validate and publish all information.",
+    "partITitle"           : "Part I National Target",
+    "partIContent"         : "This section allows you to submit national targets that can be aligned with the Global Biodiversity Framework(GBF) targets",
+    "partICountsTitle"     : "Record facets",
+    "partICountsContent"   : "Here you get your country's national targets counts that are published, draft and requested",
+    "partIGoToTitle"       : "Go to part I",
+    "partIGoToContent"     : "Go to part I details page",
+    "partISubmitTitle"     : "Submit new target",
+    "partISubmitContent"   : "Submit a new national target",
+    "partIValidateTitle"   : "Validate Part I",
+    "partIValidateContent" : "Validate all draft national target records",
+    "partIITitle"          : "Part II National target mappings",
+    "partIIContent"        : "This section allows you to do national mapping with the Global Biodiversity Framework(GBF) Goals/Targets",
+    "partIICountsTitle"    : "Record facets",
+    "partIICountsContent"  : "Here you get your country's national mapping counts that are published, draft and requested",
+    "partIIGoToTitle"      : "Go to part II",
+    "partIIGoToContent"    : "Go to part II details page",
+    "partIIValidateTitle"  : "Validate part II",
+    "partIIValidateContent": "Validate all draft national mapping records",
+    "publishTitle"         : "Publish part I and II",
+    "publishContent"       : "Publish all draft records from Part I and II",
+    "validateTitle"        : "Validate part I and II",
+    "validateContent"      : "Validate all draft records from Part I and II",
+    "refreshTitle"         : "Refresh",
+    "refreshContent"       : "Reload all records from server again",
+    "partICountTitle"      : "National target count",
+    "partICountContent"    : "Total number of national targets (draft + published)",
+    "partILinkedGbfTitle"  : "Linked GBF targets/goals",
+    "partILinkedGbfContent": "The GBF target/goal linked with your country's national target",
+    "partIStatusTitle"     : "Record status",
+    "partIStatusContent"   : "Record status which can be either published, draft or locked",
+    "partIICountTitle"     : "National mapping count",
+    "partIICountContent"   : "Total number of national mappings (draft + published)"
+
 }
