--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
@@ -8,5 +8,7 @@
     "value"             : "Value",
     "globalSourceOfData": "Global source of data",
     "globalIndicatorProviders": "Indicator providers",
-    "comments"          : "Comments"
+    "comments"          : "Comments",
+    "yes"               : "Yes",
+    "no"                : "No"
 }
