--- a/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
+++ b/i18n/en/components/pages/nr7/my-country/edit/indicator-data/nr7-view-indicator-data.json
@@ -7,6 +7,8 @@
     "year"              : "Year",
     "value"             : "Value",
     "globalSourceOfData": "Global source of data",
-    "indicatorProviders": "Indicator providers",
-    "comments"          : "Comments"
+    "globalIndicatorProviders": "Indicator providers",
+    "comments"          : "Comments",
+    "yes"               : "Yes",
+    "no"                : "No"
 }
