--- a/i18n/en/pages/dashboard.json
+++ b/i18n/en/pages/dashboard.json
@@ -22,19 +22,19 @@
     "tourWelcomeTitle"        : "Welcome to the Online Reporting Tool",
     "tourWelcomeContent"      : "The online reporting tool provides the modality for submitting national targets, as per Annex 1 of decision 15/6",
     "userInfoTitle"           : "Your personal information",
-    "userInfoContent"         : "Here you can view and update your profile information.",
+    "userInfoContent"         : "View and update your profile details.",
     "governmentTitle"         : "Country affiliation",
     "governmentContent"       : "Country affiliation is required to access submission section of the ORT",
     "rolesTitle"              : "Role(s)",
-    "rolesContent"            : "Users require either National Focal Point, Publishing Authority or National Authorized user role to access submission section of the ORT",
+    "rolesContent"            : "Users need National Focal Point, Publishing Authority, or National Authorized User roles to access the submission section.",
     "recentlyPublishedTitle"  : "Recently Published",
-    "recentlyPublishedContent": "This section displays recently published information",
+    "recentlyPublishedContent": "This section displays most recent information",
     "topNavigationTitle"      : "Navigation",
-    "topNavigationContent"    : "Quick navigation to access links",
+    "topNavigationContent"    : "Quick links for easy access",
     "sidebarNavTitle"         : "Side navigation",
-    "sidebarNavContent"       : "Allows access to all navigation option(s), you can also hide it get extra space (use < icon at the bottom of the section)",
+    "sidebarNavContent"       : "Allows access to all navigation option(s), hide it for extra space (use < icon at the bottom of the section)",
     "languageChangeTitle"     : "Language",
-    "languageChangeContent"   : "The ORT is available in all six UN languages, use this option to change to your preferred language",
+    "languageChangeContent"   : "The ORT is available in all six UN languages, Change to your preferred language.",
     "needHelpTitle"           : "Need more help?",
-    "needHelpContent"         : "Us the Chat feature to message us for additional support."
+    "needHelpContent"         : "Use the Chat feature for additional support."
 }
