--- a/i18n/en/components/layout/AppHeader.json
+++ b/i18n/en/components/layout/AppHeader.json
@@ -3,5 +3,6 @@
     "menuDashboard": "Dashboard",
     "menuNationalTargets": "National Targets",
     "menu7Nr": "7th National Report",
-    "menuSearch": "Search "
+    "menuSearch": "Search",
+    "menuHelp": "Help"
 }
