--- a/i18n/en/components/pages/national-targets/my-country/part-1/index.json
+++ b/i18n/en/components/pages/national-targets/my-country/part-1/index.json
@@ -1,6 +1,28 @@
 {
-    "title":"National target(s) : Part I",
-    "goToOverview":"Go to Overview",
-    "refresh":"Refresh",
-    "submitNewTarget":"Submit new target"
+    "title"                           : "National target(s) : Part I",
+    "goToOverview"                    : "Go to Overview",
+    "refresh"                         : "Refresh",
+    "submitNewTarget"                 : "Submit new target",
+    "tourWelcomeTitle"                : "National targets",
+    "tourWelcomeContent"              : "The National targets screen lets you manage your country's national target, this is a unique space for your country which can only be accessed by users authorized by your country.",
+    "partICountsTitle"                : "Record facets",
+    "partICountsContent"              : "Displays your country’s national target counts (published, draft, and requested).",
+    "partIGoToOverviewTitle"          : "Go to overview",
+    "partIGoToOverviewContent"                : "Go back to the overview screen to mange both part I and part II.",
+    "partIRefreshTitle"               : "Refresh",
+    "partIRefreshContent"             : "Reload all records from server",
+    "partISubmitTitle"                : "Submit new target",
+    "partISubmitContent"              : "Submit a new national target",
+    "partINationalTargetRecordTitle"  : "Record",
+    "partINationalTargetRecordContent": "National target record(s)",
+    "partILinkedGbfTitle"             : "Linked GBF targets/goals",
+    "partILinkedGbfContent"           : "GBF targets/goals linked with your country’s national target.",
+    "partIStatusTitle"                : "Record status",
+    "partIStatusContent"              : "Indicates whether a record is published, draft, or requested.",
+    "partIViewTitle"                  : "View",
+    "partIViewContent"                : "Click view to see details of this record.",
+    "partIEditTitle"                  : "Edit",
+    "partIEditContent"                : "Click edit to modify this record.",
+    "partIDeleteTitle"                : "Delete",
+    "partIDeleteContent"              : "Click to delete this record. Delete action cannot be undone."
 }
