--- a/i18n/en/components/pages/national-targets/my-country/overview.json
+++ b/i18n/en/components/pages/national-targets/my-country/overview.json
@@ -29,5 +29,41 @@
     "refresh"                : "Refresh",
     "goToPartI"              : "Go to Part I",
     "submitNewTarget"        : "Submit new target",
-    "globalTargets"          : "Global Targets"
+    "globalTargets"          : "Global Targets",
+    "tourTitle"              : "Overview",
+    "tourWelcomeTitle"     : "National targets overview",
+    "tourWelcomeContent"   : "The National targets overview screen provides an overview of both sections under national targets. It also allows you to validate and publish all information",
+    "partITitle"           : "Part I National Target",
+    "partIContent"         : "This section allows you to submit national targets aligned with the Global Biodiversity Framework(GBF) targets",
+    "partICountsTitle"     : "Record facets",
+    "partICountsContent"   : "Displays your country’s national target counts (published, draft, and requested).",
+    "partIGoToTitle"       : "Go to part I",
+    "partIGoToContent"     : "Access the details page for Part I.",
+    "partISubmitTitle"     : "Submit new target",
+    "partISubmitContent"   : "Submit a new national target",
+    "partIValidateTitle"   : "Validate Part I",
+    "partIValidateContent" : "Validate all draft national target records",
+    "partIITitle"          : "Part II National target mappings",
+    "partIIContent"        : "This section allows national mapping with the Global Biodiversity Framework(GBF) Goals/Targets",
+    "partIICountsTitle"    : "Record facets",
+    "partIICountsContent"  : "Displays your country’s national mapping counts (published, draft, and requested).",
+    "partIIGoToTitle"      : "Go to part II",
+    "partIIGoToContent"    : "Access the details page for part II",
+    "partIIValidateTitle"  : "Validate part II",
+    "partIIValidateContent": "Validate all draft national mapping records",
+    "publishTitle"         : "Publish part I and II",
+    "publishContent"       : "Publish all draft records from Part I and II",
+    "validateTitle"        : "Validate part I and II",
+    "validateContent"      : "Validate all draft records from Part I and II",
+    "refreshTitle"         : "Refresh",
+    "refreshContent"       : "Reload all records from server",
+    "partICountTitle"      : "National target count",
+    "partICountContent"    : "Total number of national targets (draft + published).",
+    "partILinkedGbfTitle"  : "Linked GBF targets/goals",
+    "partILinkedGbfContent": "GBF targets/goals linked with your country’s national target.",
+    "partIStatusTitle"     : "Record status",
+    "partIStatusContent"   : "Indicates whether a record is published, draft, or locked.",
+    "partIICountTitle"     : "National mapping count",
+    "partIICountContent"   : "Total number of national mappings (draft + published)."
+
 }
