Add filters to national target list

--- a/i18n/en/components/pages/national-targets/my-country/record-list.json
+++ b/i18n/en/components/pages/national-targets/my-country/record-list.json
@@ -7,5 +7,8 @@
     "edit":"Edit",    
     "passedValidation"  : "Validation successful",    
     "hasErrors" : "Failed Validations",
-    "validating"    : "Validating..."
+    "validating"    : "Validating...",
+    "filterByTitle": "Filter by title",
+    "filterByGlobalTargets": "Filter by global targets",
+    "filterByGlobalGoals": "Filter by global goals"
 }
