Show successful validation message

--- a/i18n/en/components/pages/national-targets/my-country/overview.json
+++ b/i18n/en/components/pages/national-targets/my-country/overview.json
@@ -1,6 +1,7 @@
 {
-    "validationErrorsTitle"  : "Validation errors",
+    "validationErrorsTitle"  : "Validation",
     "validationErrorsMessage": "There is still mandatory information missing in some of your record(s), please make sure that all records marked in red are completed.",
+    "validationSuccessMessage": "Validation successful",
     "close"                  : "Close",
     "successfulMessage"      : "Your request to publish your country's National Targets and Mapping has been received.",
     "successMessageNau"      : "Your request to publish will be sent to your country's NFP who has rights to publish.",
